added third blog post and minor typos

--- a/_posts/2023-05-22-cscg23-vm.md
+++ b/_posts/2023-05-22-cscg23-vm.md
@@ -196,7 +196,7 @@ Observe that the removed instruction results are not verified for correctness. T
 Now that we have a good understanding of how the VM is functioning we can start to exploit it. Our goal is clear. We want to read the flag stored in non-readable memory and print it back to us. The crucial observations are the following:
 
  - Memory is file backed
- - There are 4 \textsc{CacheEntry} objects and we can force a cache eviction with 4 instructions
+ - There are 4 `CacheEntry` objects and we can force a cache eviction with 4 instructions
  - The communication channel can hold up to 8 objects
  - IOread is a blocking interrupt and can trigger a reset
  - During a reset the remaining instructions are not verified
@@ -273,7 +273,7 @@ payload += b"L" + pule(flag)
 for i in range(5):
     payload += b"S" + pule(heap + 0x100 * i)
 
-payload += b"..."
+payload += b"." * 3
 
 label_b = pc + len(payload)
 
@@ -306,3 +306,5 @@ print(p.recv(4))
 The challenge design obviously  does not reflect a real implementation and apart from our observations, there are other flaws. Nevertheless, we can at least try to provide solutions for the flaws we abused. First of all, it was also possible to start two connections and have the VMs share their files and memory, thus enabling a trivial attack. This could be fixed by using unique files. Secondly, a reset must ensure to reset the complete state, this includes the memory written to disk. This is a non-trivial task and we do not see a simple solution without major reworks. Thirdly, the validation loop should also verify the executions on a reset. Arguably, this will lead to problems if the validity depends on the input, so again, there is no quick and easy fix.
 
 Overall this challenge shows that speculative execution and similar means are difficult to implement safely, as shown by real-world attacks such as Spectre.
+
+[CSCG]: https://cscg.de/
