--- a/_posts/2023-05-22-cscg23-vm.md
+++ b/_posts/2023-05-22-cscg23-vm.md
@@ -5,6 +5,8 @@ categories: ctf, cscg
 author:
 - Gehim
 ---
+Usage of speculative execution to read protected memory in a virtual machine implementated in Rust.
+
 This year i participated in the [CSCG][CSCG] and managed to qualify for the finals again. All participants were required to submit three writeups to be eligible for the final round. I chose this challenge because i like the uniqueness and i wanted to appreciate the effort put into it.
 
 # Overview
