--- a/_posts/2023-05-25-cscg23-george.md
+++ b/_posts/2023-05-25-cscg23-george.md
@@ -5,6 +5,8 @@ categories: ctf, cscg
 author:
 - Gehim
 ---
+Writeup for an OSINT Challenge from the Cyber Security Challenge Germany Qualification Round.
+
 This year i participated in the [CSCG][CSCG] and managed to qualify for the finals again. All participants were required to submit three writeups to be eligible for the final round. Although i usually dislike OSINT challenges in CTF, i somewhat enjoyed this one.
 
 # Overview
